# BingWrapper

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  rss.xml
.github/workflows/: ci.yaml  daily.yaml  dependabot-merge.yaml  pull-request-check.yaml
bing_wrapper/: Store.py  __init__.py  __main__.py  fetcher.py  store.py
bing_wrapper/rss/: models.py
src/: Store.py  WallpaperWrapper.py  log.py
