[project]
name = "bingwrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.10",
    "pre-commit>=4.1.0",
    "pydantic-xml>=2.17.3",
    "requests>=2.32.3",
]

[[tool.uv.index]]
# useful in china
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
