[project]
name = "bingwrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.136.1",
    "pre-commit>=4.6.0",
    "pydantic-xml>=2.20.0",
    "requests>=2.32.3",
]

[[tool.uv.index]]
# useful in china
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
