[project]
name = "bingwrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.139.0",
    "pre-commit>=4.6.0",
    "pydantic-xml>=2.21.0",
    "requests>=2.34.2",
]

[[tool.uv.index]]
# useful in china
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
